--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Watchmate Web</title>
   </head>
-  <body>
+  <body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100 [color-scheme:light_dark]">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
